discussion/kv_engine/155596/155596_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'cheshire-cat'

* cheshire-cat:
  MB-46482: Producer to account for namespace of keys for commit/abort

Change-Id: I60ef4931fbb9e0598724429b9ad34e8cc3d1b0d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-11 10:10:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 10:27:55.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 10:35:45.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9776/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/test_manifest.h:28:10: error: "spdlog/fmt/fmt.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/fmt.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9776/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9776/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8371/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36742/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/295/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31406/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10424/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11777/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11351/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11499/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19360/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 10:39:24.000000000
Message: 
Patch Set 1: Verified+1

overriding clang-tidy -1 as it not being able to find spdlog is a known issue
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 10:39:26.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 10:39:37.000000000
Message: 
Change has been successfully merged by Ben Huddleston
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 10:58:56.000000000
Message: 
Patch Set 1:

Build Started http://cv.jenkins.couchbase.com/job/kv_engine-post-commit-master/7982/
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 13:21:31.000000000
Message: 
Patch Set 1:

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-post-commit-master/7982/ : SUCCESS'
----------------------------------------------------------------------------------------------------------------------
